<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wy.bizproto.SignUp">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="Email:"
        android:textSize="20sp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Handphone:"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:text="Password:"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/EnterPhoneNumber"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/re_enter"
        android:layout_above="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/EnterPass"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/EnterEmail"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="30dp"
        android:text="Name:"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/editText3"
        android:hint="@string/EnterName"
        android:id="@+id/editText7" />


    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/stone"
        android:onClick="gotoHome"
        android:text="Register"
        android:textColor="@color/white"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
